# totems

./: .env.example  .gitignore  README.md  bun.lockb  package.json
cli/: README.md  bun.lockb  package-lock.json  package.json  tsconfig.json
cli/src/: cloner.ts  index.ts  prompt.ts  runner.ts
contracts/feed/: feed.cpp
contracts/feed/include/feed/: feed.hpp
contracts/interfaces/: mod.interface.hpp
contracts/market/: market.cpp
contracts/market/include/market/: market.hpp
contracts/mods/: README.md  burner.cpp  cooldown.cpp  delayed.cpp  extinguisher.cpp  freezer.cpp  kyc.cpp  minter.cpp  testmod.cpp  whaleblock.cpp
contracts/removers/: remover.cpp
contracts/shared/: shared.hpp
contracts/simulator/: devtotem.cpp
contracts/totems/: totems.cpp
contracts/totems/include/totems/: totems.hpp
contracts/validator/: validator.cpp
contracts/vaulta/: CMakeLists.txt  core.vaulta.cpp  eosio.token.cpp
contracts/vaulta/include/core.vaulta/: core.vaulta.hpp  oldsystem.hpp  token.hpp
contracts/vaulta/include/eosio.token/: eosio.token.hpp
deployments/: jungle.ts  jungle_freezer.ts
scripts/: build.ts  generate-interface.ts  generate-simulator.ts
tests/: readonly.spec.ts  serializer.spec.ts  shared.ts  totems.spec.ts  validator.spec.ts
tools/: deployer.ts  serializer.ts
